update: Contact - Fix layout bugs #WTHZONE-875

--- a/src/assets/styles/partials/_forms.scss
+++ b/src/assets/styles/partials/_forms.scss
@@ -29,6 +29,19 @@
     display: none;
 }
 
+
+/**
+<div class="form-group no-label"
+     [ngClass]="{'has-error': (!name.valid && name.touched),'has-success': (name.valid && name.touched)}">
+  <input autofocus [formControl]="name" type="text" class="form-control" placeholder="">
+  <div *ngIf="!name.valid && name.touched">
+    <span *ngIf="!name.valid && name.errors.required" class="help-block">
+      Name is required
+    </span>
+  </div>
+</div>
+ */
+
 .form-group {
     position: relative;
     @include box-shadow(0 0 0 transparent);
